--- a/templates/EditEmp.html
+++ b/templates/EditEmp.html
@@ -66,6 +66,7 @@
                         <label>Location:</label>
                         <input type="text" name="location" class="form-control">
 
+                        <input type="submit" class="form-control" value="Add Staff">
                     </form>
                 </div>
 
