--- a/templates/AddEmpOutput.html
+++ b/templates/AddEmpOutput.html
@@ -1,70 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title>WorkBalance</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<center>
+	<font color="DodgerBlue" size="5" style="font-family: avenir">
+		<body bgcolor="lightgrey">
+			<h1>SAVE SUCCESSFUL</h1><br>
+			<h2>Following Employee has been added to the database</h2><br>
+			<h2>{{ name }}</h2><br>
+			<title>Add Emp Output</title>
+				<form action="/" autocomplete="on" method = "POST">
 
-    <link rel="stylesheet" href="static/css/animate.min.css">
-    <link rel="stylesheet" href="static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/font-awesome.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="static/css/templatemo-style.css">
-    <script src="static/js/jquery.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>
-    <script src="static/js/jquery.singlePageNav.min.js"></script>
-    <script src="static/js/typed.js"></script>
-    <script src="static/js/wow.min.js"></script>
-    <script src="static/js/custom.js"></script>	
-</head>
-		<body>
-			<nav class="navbar navbar-default" role="navigation">
-				<div class="container">
-					<div class="navbar-header">
-						<button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-							<span class="icon icon-bar"></span>
-							<span class="icon icon-bar"></span>
-							<span class="icon icon-bar"></span>
-						</button>
-						<a href="#" class="navbar-brand">WorkBalance</a>
-					</div>
-					<div class="collapse navbar-collapse">
-						<ul class="nav navbar-nav navbar-right">
-							<li><a href="#top">HOME</a></li>
-							<li><a href="#about">ABOUT</a></li>
-							<li><a href="{{ url_for('Add') }}">ADD</a></li>
-							<li><a href="{{ url_for('view')}}">VIEW</a></li>
-							<li><a href="#portfolio">DELETE</a></li>
-						</ul>
-					</div>
-				</div>
-			</nav>
-			<section id="about">
-				<div class="container">
-					<div class="row">
-							<div class="col-md-12">
-								<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">SAVE SUCCESSFUL</h2>
-								<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">Following Employee has been added to the database</h2><br>
-								<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">{{ name }}</h2><br>
-								<div class="col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.9s">
-									<form action="/" autocomplete="on" method = "POST">
-					
-										<button type="submit" class="form-control">GO BACK</button><br><br>
-					
-									</form>	
-								</div>	
-							
-							</div>
-					</div>
-				</div>
-			</section>
+					<button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">GO BACK</button><br><br>
 
+				</form>
 		</body>
-
-
+	</font>
+</center>
+</head>
 <body>
 
 </body>
