--- a/templates/GetEmpOutput.html
+++ b/templates/GetEmpOutput.html
@@ -69,7 +69,7 @@
 								<label>Image URL:</label>
 								<label><a> {{ user[5] }} </a></label><br/><br/>
 				
-							<button type="submit" onclick="navFun()" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;" formaction="/edit">Update</button><br><br>
+							<button type="submit" onclick="location.href = '/edit';" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;" formaction="/edit">Update</button><br><br>
 								
 							<button type="submit" formaction="/" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;" formaction="http://3.134.115.108:80/getemp">Delete</button><br><br>
 
@@ -88,13 +88,6 @@
 					</div>
 				</div>
 			</footer>
-			<script>
-				function myFunction() {
-				  location.replace("/edit")
-				}
-				</script>
-				
+			
 		</body>
-
-
 </html>
