--- a/templates/EditEmp.html
+++ b/templates/EditEmp.html
@@ -52,7 +52,7 @@
                 <div class="col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.9s">
                     <form action="/addemp" autocomplete="on" method = "POST" enctype="multipart/form-data">
                         <label>Employee ID:</label>
-                        <input type="number" name="emp_id" class="form-control">
+                        <input type="number" name="emp_id" class="form-control" text="hi">
 
                         <label>First Name:</label>
                         <input type="text" name="first_name" class="form-control">
