--- a/templates/Homepage.html
+++ b/templates/Homepage.html
@@ -47,7 +47,7 @@
                     <li><a href="#about">ABOUT</a></li>
                     <li><a href="{{ url_for('Add') }}">ADD</a></li>
                     <li><a href="{{ url_for('view')}}">VIEW</a></li>
-                    <li><a href="#portfolio">DELETE</a></li>
+                    <li><a href="{{ url_for('delete')}}">DELETE</a></li>
                 </ul>
             </div>
         </div>
