--- a/templates/Homepage.html
+++ b/templates/Homepage.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>WorkBalance</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta http-equiv="Cache-control" content="no-cache">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="static/css/animate.min.css">
