--- a/templates/Homepage.html
+++ b/templates/Homepage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>WorkBalance</title>
-    <meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="static/css/animate.min.css">
