--- a/templates/AddEmp.html
+++ b/templates/AddEmp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>WorkBalance-Add Employee Information</title>
-    <meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="static/css/animate.min.css">
