--- a/templates/Homepage.html
+++ b/templates/Homepage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>WorkBalance</title>
-    <meta http-equiv="Cache-control" content="no-store">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="static/css/animate.min.css">
@@ -41,7 +41,7 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#top">HOME</a></li>
+                    <li><a href="{{ url_for('/') }}">HOME</a></li>
                     <li><a href="#about">ABOUT</a></li>
                     <li><a href="{{ url_for('Add') }}">ADD</a></li>
                     <li><a href="{{ url_for('view')}}">VIEW</a></li>
