--- a/templates/AddEmp.html
+++ b/templates/AddEmp.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8" />
     <title>WorkBalance-Add Employee Information</title>
-    <meta http-equiv="Cache-control" content="no-store">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="static/css/animate.min.css">
@@ -32,11 +31,11 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#top">HOME</a></li>
+                    <li><a href="{{ url_for('/') }}">HOME</a></li>
                     <li><a href="#about">ABOUT</a></li>
                     <li><a href="{{ url_for('Add') }}">ADD</a></li>
-                    <li><a href="#service">VIEW</a></li>
-                    <li><a href="#portfolio">DELETE</a></li>
+                    <li><a href="{{ url_for('view')}}">VIEW</a></li>
+                    <li><a href="{{ url_for('delete')}}">DELETE</a></li>
                 </ul>
             </div>
         </div>
