--- a/templates/GetEmpDelete.html
+++ b/templates/GetEmpDelete.html
@@ -30,15 +30,15 @@
 						</button>
 						<a href="#" class="navbar-brand">WorkBalance</a>
 					</div>
-					<div class="collapse navbar-collapse">
-						<ul class="nav navbar-nav navbar-right">
-							<li><a href="{{ url_for('/') }}">HOME</a></li>
-							<li><a href="#about">ABOUT</a></li>
-							<li><a href="{{ url_for('Add') }}">ADD</a></li>
-							<li><a href="{{ url_for('view')}}">VIEW</a></li>
-							<li><a href="{{ url_for('delete')}}">DELETE</a></li>
-						</ul>
-					</div>
+                    <div class="collapse navbar-collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="{{ url_for('/') }}">HOME</a></li>
+                            <li><a href="#about">ABOUT</a></li>
+                            <li><a href="{{ url_for('Add') }}">ADD</a></li>
+                            <li><a href="{{ url_for('view')}}">VIEW</a></li>
+                            <li><a href="{{ url_for('delete')}}">DELETE</a></li>
+                        </ul>
+                    </div>
 				</div>
 			</nav>
 
@@ -49,9 +49,9 @@
 								<h2 style="color: DodgerBlue" class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">Employee Information</h1>
 							</div>
 								<div class="col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.9s">
-									<form action="/fetchdataforedit" autocomplete="on" method="POST">
+									<form action="/fetchdatafordelete" autocomplete="on" method="POST">
 
-										<h2 style="color: grey">Enter Employee ID</h2>
+										<h2 style="color: grey">Enter Employee ID to delete</h2>
 						
 										<label>Employee ID:</label>
 										<input type="number" name="emp_id" class="form-control">
