--- a/templates/EditEmp.html
+++ b/templates/EditEmp.html
@@ -31,7 +31,7 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="{{ url_for('/') }}">HOME</a></li>
+                    <li><a href="{{ url_for('home') }}">HOME</a></li>
                     <li><a href="#about">ABOUT</a></li>
                     <li><a href="{{ url_for('Add') }}">ADD</a></li>
                     <li><a href="{{ url_for('view')}}">VIEW</a></li>
