--- a/templates/GetEmpDelete.html
+++ b/templates/GetEmpDelete.html
@@ -30,15 +30,15 @@
 						</button>
 						<a href="#" class="navbar-brand">WorkBalance</a>
 					</div>
-                    <div class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="{{ url_for('/') }}">HOME</a></li>
-                            <li><a href="#about">ABOUT</a></li>
-                            <li><a href="{{ url_for('Add') }}">ADD</a></li>
-                            <li><a href="{{ url_for('view')}}">VIEW</a></li>
-                            <li><a href="{{ url_for('delete')}}">DELETE</a></li>
-                        </ul>
-                    </div>
+					<div class="collapse navbar-collapse">
+						<ul class="nav navbar-nav navbar-right">
+							<li><a href="{{ url_for('home') }}">HOME</a></li>
+							<li><a href="#about">ABOUT</a></li>
+							<li><a href="{{ url_for('Add') }}">ADD</a></li>
+							<li><a href="{{ url_for('view')}}">VIEW</a></li>
+							<li><a href="{{ url_for('delete')}}">DELETE</a></li>
+						</ul>
+					</div>
 				</div>
 			</nav>
 
