--- a/templates/EditEmp.html
+++ b/templates/EditEmp.html
@@ -49,19 +49,19 @@
                 <div class="col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.9s">
                     <form action="/addemp" autocomplete="on" method = "POST" enctype="multipart/form-data">
                         <label>Employee ID:</label>
-                        <textarea disabled style="height: 50px; resize: none; " name="emp_id" class="form-control"> </textarea>
+                        <textarea disabled style="height: 50px; resize: none; " name="emp_id" class="form-control"> {{ user[0] }} </textarea>
 
                         <label>First Name:</label>
-                        <textarea style="height: 50px; resize: none; " name="first_name" class="form-control"> </textarea>
+                        <textarea style="height: 50px; resize: none; " name="first_name" class="form-control"> {{ user[1] }} </textarea>
 
                         <label>Last Name:</label>
-                        <textarea style="height: 50px; resize: none; " name="last_name" class="form-control"> </textarea>
+                        <textarea style="height: 50px; resize: none; " name="last_name" class="form-control"> {{ user[2] }} </textarea>
 
                         <label>Primary Skill:</label>
-                        <textarea style="height: 50px; resize: none; " name="pri_skill" class="form-control"> </textarea>
+                        <textarea style="height: 50px; resize: none; " name="pri_skill" class="form-control"> {{ user[3] }} </textarea>
 
                         <label>Location:</label>
-                        <textarea style="height: 50px; resize: none; " name="location" class="form-control"> </textarea>
+                        <textarea style="height: 50px; resize: none; " name="location" class="form-control"> {{ user[4] }} </textarea>
 
                         <input type="submit" class="form-control" value="Update Staff">
                     </form>
