--- a/templates/GetEmpDelete.html
+++ b/templates/GetEmpDelete.html
@@ -36,6 +36,7 @@
 							<li><a href="#about">ABOUT</a></li>
 							<li><a href="{{ url_for('Add') }}">ADD</a></li>
 							<li><a href="{{ url_for('view')}}">VIEW</a></li>
+							<li><a href="{{ url_for('edit')}}">EDIT</a></li>
 							<li><a href="{{ url_for('delete')}}">DELETE</a></li>
 						</ul>
 					</div>
