--- a/templates/EditEmp.html
+++ b/templates/EditEmp.html
@@ -48,7 +48,7 @@
                     <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">Update Employee Information</h2>
                 </div>
                 <div class="col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.9s">
-                    <form action="/addemp" autocomplete="on" method = "POST" enctype="multipart/form-data">
+                    <form action="/update" autocomplete="on" method = "POST" enctype="multipart/form-data">
                         <label>Employee ID:</label>
                         <textarea disabled style="height: 50px; resize: none; " name="emp_id" class="form-control"> {{ user[0] }} </textarea>
 
