--- a/templates/EditEmp.html
+++ b/templates/EditEmp.html
@@ -50,7 +50,7 @@
                 <div class="col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.9s">
                     <form action="/update" autocomplete="on" method = "POST" enctype="multipart/form-data">
                         <label>Employee ID:</label>
-                        <textarea disabled style="height: 50px; resize: none; " name="emp_id" id="emp_id" class="form-control"> {{ user[0] }} </textarea>
+                        <textarea style="height: 50px; resize: none; " name="emp_id" id="emp_id" class="form-control"> {{ user[0] }} </textarea>
 
                         <label>First Name:</label>
                         <textarea style="height: 50px; resize: none; " name="first_name" id="first_name" class="form-control"> {{ user[1] }} </textarea>
