--- a/templates/EditEmpOutput.html
+++ b/templates/EditEmpOutput.html
@@ -4,8 +4,8 @@
 <center>
 	<font color="DodgerBlue" size="5" style="font-family: avenir">
 		<body bgcolor="lightgrey">
-			<h1>DELETE SUCCESSFUL</h1><br>
-			<h2>Employee ID : {{ id }} and its information has been remove from the database</h2><br>
+			<h1>UPDATE SUCCESSFUL</h1><br>
+			<h2>Employee ID : {{ id }} and its information has been update</h2><br>
 			<title>Update Emp Output</title>
 				<form action="/" autocomplete="on" method = "POST">
 
