--- a/templates/AddEmpOutput.html
+++ b/templates/AddEmpOutput.html
@@ -8,11 +8,10 @@
 			<h2>Following Employee has been added to the database</h2><br>
 			<h2>{{ name }}</h2><br>
 			<title>Add Emp Output</title>
-				<form action="/" autocomplete="on" method = "POST">
 
-					<button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">GO BACK</button><br><br>
+					<button type="submit" onclick="location.href = '/edit'; style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">GO BACK</button><br><br>
 
-				</form>
+
 		</body>
 	</font>
 </center>
