--- a/templates/AddEmpOutput.html
+++ b/templates/AddEmpOutput.html
@@ -9,8 +9,8 @@
 			<h2>{{ name }}</h2><br>
 			<title>Add Emp Output</title>
 
-					<button type="submit" onclick="location.href = '/edit'; style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">GO BACK</button><br><br>
 
+			<button type="submit" onclick="location.href = '/home';" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;" formaction="/edit">Back to Homepage</button><br><br>
 
 		</body>
 	</font>
